--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "postcss": "latest",
     "tailwindcss": "latest",
     "typescript": "^4.9.3",
+    "unplugin-auto-import": "^0.15.3",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.11"
   }
