--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "less": "^4.1.3",
     "postcss": "latest",
     "tailwindcss": "latest",
+    "terser": "^5.17.1",
     "typescript": "^4.9.3",
     "unplugin-auto-import": "^0.15.3",
     "unplugin-vue-components": "^0.24.1",
