--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm install
 
       - name: Build project
-        run: npm build
+        run: npm run build
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
